fix version mobile

--- a/bc0/style.css
+++ b/bc0/style.css
@@ -111,6 +111,7 @@ background-color: violet;
 width: 100%;
 height: 150px;
 background-color: black;
+border-top: 1px solid red;
 }
 .footer p{
     margin: 10px;
@@ -120,6 +121,14 @@ background-color: black;
 
 
 @media(max-width: 425px) {
+    .container{
+        width: 100vw;
+        height: 100vh;
+    }
+    .navbarr{
+        position: fixed;
+        top: 0;
+    }
     .navbarr h1{
      font-size: 15px;
      padding-bottom: 5px;
@@ -130,11 +139,13 @@ background-color: black;
     }
     .under h1{
         font-size: 13px;
+        margin-bottom: 100px;
        
     }
     .under .icon ion-icon{
         font-size: 10px;
         margin: 0;
+        margin-bottom: 100px;
     }
     .box-pulse {
         width: 80%;
@@ -142,5 +153,10 @@ background-color: black;
     .footer p{
         font-size: 10px;
     
+    }
+    .footer{
+        height: 60px;
+        position: fixed;
+        bottom: 0;
     }
    }
